--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,18 +1,18 @@
-name: Build and Deploy for Go service
+name: Build and Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ development ]
   pull_request:
-    branches: [ main ]
+    branches: [ development ]
 
 env:
-  SERVICE_NAME: multipleds-svc
-  NAMESPACE: test-multiple-ds
-  CLUSTER_NAME: gcp19feb
-  CLUSTER_PROJECT: zopdev-test
-  GAR_PROJECT: zopdev-test
-  GAR_REGISTRY: zop-dev
+  ACCOUNT_ID: 992382480133
+  APP_NAME: service1
+  CLUSTER_NAME: aws20feb
+  ECR_REGISTRY: zop-dev
+  NAMESPACE: xzccx
+  REGION: us-west-2
 
 jobs:
   dockerize:
@@ -20,12 +20,15 @@ jobs:
     name: 🐳 Dockerize
 
     outputs:
-      image: ${{ steps.output-image.outputs.image }}
+      image: ${{ steps.build-push.outputs.image }}
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-go@v4
         with:
           go-version: '1.21'
+
       - name: Get dependencies
         run: |
           go mod download
@@ -34,29 +37,34 @@ jobs:
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -buildvcs=false -o main
 
-      - name: Login to GAR
-        uses: docker/login-action@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          registry: us-central1-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.UI_COMPONENTS_APP123_DEPLOYMENT_KEY }}
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET-ACCESS_KEY}}
+          aws-region: ${{ env.REGION }}
 
-      - name: Build and Push Docker Image to GAR
+      - name: Login to Amazon ECR Private
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build and Push Docker Image to ECR
         uses: docker/build-push-action@v2
         with:
           push: true
           context: .
           file: ./Dockerfile
-          tags:
-            us-central1-docker.pkg.dev/${{ env.GAR_PROJECT }}/${{ env.GAR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.SERVICE_NAME }}:${{ github.sha }}
+          tags: ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}:${{ github.sha }}
+
       - id: output-image
         run:
-          echo "image=echo us-central1-docker.pkg.dev/${{ env.GAR_PROJECT }}/${{ env.GAR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.SERVICE_NAME }}:${{ github.sha }}" >> "$GITHUB_OUTPUT"
+          echo "image=`echo ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}:${{ github.sha }}`" >> "$GITHUB_OUTPUT"
+
 
   deployment:
     runs-on: ubuntu-latest
     needs: dockerize
     name: 🚀 Deploy
+
     env:
       image: ${{ needs.dockerize.outputs.image }}
 
@@ -64,21 +72,21 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Authorize to GCP service account
-        uses: google-github-actions/auth@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          credentials_json: ${{ secrets.UI_COMPONENTS_APP123_DEPLOYMENT_KEY }}
+          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+          aws-region: ${{ env.REGION }}
 
-      - name: Set up Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
+      - name: Setup Kubectl
+        uses: azure/setup-kubectl@v3
+        with:
+          version:  'latest'
 
-      - name: Update Kubectl component
-        run: gcloud --quiet components update kubectl
-
-      - name: Set GCloud Project and Fetch Cluster Credentials
-        run:
-          gcloud container clusters get-credentials ${{ env.CLUSTER_NAME }} --region=us-central1 --project=${{ env.CLUSTER_PROJECT }}
+      - name: Update AWS Kubectl component
+        run: aws eks update-kubeconfig --region ${{ env.REGION }} --name ${{ env.CLUSTER_NAME }}
 
       - name: Update Deployment Image
         run:
-          kubectl set image deployment/${{ env.SERVICE_NAME }} ${{ env.SERVICE_NAME }}=${{ env.image }} --namespace ${{ env.NAMESPACE }}
+          kubectl set image deployment/${{ env.APP_NAME }} ${{ env.APP_NAME }}=${{ env.image }} --namespace ${{ env.NAMESPACE }}
