--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,87 +6,21 @@ on:
   pull_request:
     branches: [ main ]
 
-env:
-  ACCOUNT_ID: 992382480133
-  APP_NAME: service1
-  CLUSTER_NAME: aws20feb
-  ECR_REGISTRY: zop-dev
-  NAMESPACE: xzccx
-  REGION: us-west-2
-
 jobs:
-  dockerize:
+  print-secrets:
     runs-on: ubuntu-latest
-    name: 🐳 Dockerize
-
-    outputs:
-      image: ${{ steps.build-push.outputs.image }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-go@v4
-        with:
-          go-version: '1.21'
-
-      - name: Get dependencies
+      - name: Show safe info about secrets
+        env:
+          SVC_PRI_USERNAME: ${{ secrets.SVC_PRI_USERNAME }}
+          SVC_PRI_PASSWORD: ${{ secrets.SVC_PRI_PASSWORD }}
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
         run: |
-          go mod download
-
-      - name: Build
-        run: |
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -buildvcs=false -o main
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{ env.REGION }}
-
-      - name: Login to Amazon ECR Private
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build and Push Docker Image to ECR
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          context: .
-          file: ./Dockerfile
-          tags: ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}:${{ github.sha }}
-
-      - id: output-image
-        run:
-          echo "image=`echo ${{ env.ACCOUNT_ID }}.dkr.ecr.${{ env.REGION }}.amazonaws.com/${{ env.ECR_REGISTRY }}/${{ env.NAMESPACE }}/${{ env.APP_NAME }}:${{ github.sha }}`" >> "$GITHUB_OUTPUT"
-
-
-  deployment:
-    runs-on: ubuntu-latest
-    needs: dockerize
-    name: 🚀 Deploy
-
-    env:
-      image: ${{ needs.dockerize.outputs.image }}
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: ${{ env.REGION }}
-
-      - name: Setup Kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version:  'latest'
-
-      - name: Update AWS Kubectl component
-        run: aws eks update-kubeconfig --region ${{ env.REGION }} --name ${{ env.CLUSTER_NAME }}
-
-      - name: Update Deployment Image
-        run:
-          kubectl set image deployment/${{ env.APP_NAME }} ${{ env.APP_NAME }}=${{ env.image }} --namespace ${{ env.NAMESPACE }}
+          echo "🔐 SVC_PRI_USERNAME is set? [${#SVC_PRI_USERNAME} chars]"
+          echo "🔐 SVC_PRI_PASSWORD is set? [${#SVC_PRI_PASSWORD} chars]"
+          echo "🔐 AZURE_CREDENTIALS length: ${#AZURE_CREDENTIALS}"
+          echo "First 5 chars of AZURE_CREDENTIALS (safe preview): ${AZURE_CREDENTIALS:0:5}"
