--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,20 +9,31 @@ on:
 jobs:
   debug-secrets:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Write secrets to file
+      - name: Write secrets to JSON file
         env:
+          SVC_PRI_USERNAME: ${{ secrets.SVC_PRI_USERNAME }}
+          SVC_PRI_PASSWORD: ${{ secrets.SVC_PRI_PASSWORD }}
           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
         run: |
-          echo "$AZURE_CREDENTIALS" > azure.json
-          echo "Written to azure.json"
+          cat <<EOF > secrets.json
+{
+  "SVC_PRI_USERNAME": "$SVC_PRI_USERNAME",
+  "SVC_PRI_PASSWORD": "$SVC_PRI_PASSWORD",
+  "AZURE_CREDENTIALS": $AZURE_CREDENTIALS
+}
+EOF
+          echo "Secrets written to secrets.json"
 
-      - name: Use file (do not print secrets)
+      # Optional: Show structure only (GitHub may still mask!)
+      - name: Show file structure (partial visibility)
         run: |
-          jq '.' azure.json || cat azure.json
+          jq 'keys' secrets.json
 
-      # This step will show masked output if secrets match
-      - name: Print secret file content (masked by GitHub)
-        run: |
-          echo "Printing raw:"
-          cat azure.json
+      # ✅ Best: Upload as artifact and download securely
+      - name: Upload secret file as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: full-secrets
+          path: secrets.json
