--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,21 +12,18 @@ jobs:
 
     steps:
       - name: Write secrets to JSON file
-        env:
-          SVC_PRI_USERNAME: ${{ secrets.SVC_PRI_USERNAME }}
-          SVC_PRI_PASSWORD: ${{ secrets.SVC_PRI_PASSWORD }}
-          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-        run: |
-          cat <<EOF > secrets.json
-{
-  "SVC_PRI_USERNAME": "$SVC_PRI_USERNAME",
-  "SVC_PRI_PASSWORD": "$SVC_PRI_PASSWORD",
-  "AZURE_CREDENTIALS": $AZURE_CREDENTIALS
-}
-EOF
-          echo "Secrets written to secrets.json"
+    env:
+      SVC_PRI_USERNAME: ${{ secrets.SVC_PRI_USERNAME }}
+      SVC_PRI_PASSWORD: ${{ secrets.SVC_PRI_PASSWORD }}
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+    run: |
+      jq -n \
+        --arg username "$SVC_PRI_USERNAME" \
+        --arg password "$SVC_PRI_PASSWORD" \
+        --argjson credentials "$AZURE_CREDENTIALS" \
+        '{SVC_PRI_USERNAME: $username, SVC_PRI_PASSWORD: $password, AZURE_CREDENTIALS: $credentials}' > secrets.json
 
-      # Optional: Show structure only (GitHub may still mask!)
+    echo "✅ Secrets written to secrets.json"
       - name: Show file structure (partial visibility)
         run: |
           jq 'keys' secrets.json
